chore: Rename project

--- a/tests/EtherSharp.Tests.csproj
+++ b/tests/EtherSharp.Tests.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\EVM.net.csproj" />
+    <ProjectReference Include="..\src\EtherSharp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
