--- a/.editorconfig
+++ b/.editorconfig
@@ -193,37 +193,41 @@ csharp_preserve_single_line_statements = false
 
 # Naming rules
 
-dotnet_naming_rule.interface_should_be_begins_with_i.severity = error
+dotnet_naming_rule.interface_should_be_begins_with_i.severity = warning
 dotnet_naming_rule.interface_should_be_begins_with_i.symbols = interface
 dotnet_naming_rule.interface_should_be_begins_with_i.style = begins_with_i
 
-dotnet_naming_rule.types_should_be_pascal_case.severity = error
+dotnet_naming_rule.types_should_be_pascal_case.severity = warning
 dotnet_naming_rule.types_should_be_pascal_case.symbols = types
 dotnet_naming_rule.types_should_be_pascal_case.style = pascal_case
 
-dotnet_naming_rule.method_should_be_pascal_case.severity = error
+dotnet_naming_rule.method_should_be_pascal_case.severity = warning
 dotnet_naming_rule.method_should_be_pascal_case.symbols = method
 dotnet_naming_rule.method_should_be_pascal_case.style = pascal_case
 
-dotnet_naming_rule.private_or_internal_field_should_be_begins_with__.severity = error
+dotnet_naming_rule.private_or_internal_field_should_be_begins_with__.severity = warning
 dotnet_naming_rule.private_or_internal_field_should_be_begins_with__.symbols = private_or_internal_field
 dotnet_naming_rule.private_or_internal_field_should_be_begins_with__.style = begins_with__
 
-dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = error
+dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = warning
 dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
 dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
-dotnet_naming_rule.public_or_protected_field_should_be_pascal_case.severity = error
+dotnet_naming_rule.public_or_protected_field_should_be_pascal_case.severity = warning
 dotnet_naming_rule.public_or_protected_field_should_be_pascal_case.symbols = public_or_protected_field
 dotnet_naming_rule.public_or_protected_field_should_be_pascal_case.style = pascal_case
 
-dotnet_naming_rule.type_parameters_should_be_begins_with_t.severity = error
+dotnet_naming_rule.type_parameters_should_be_begins_with_t.severity = warning
 dotnet_naming_rule.type_parameters_should_be_begins_with_t.symbols = type_parameters
 dotnet_naming_rule.type_parameters_should_be_begins_with_t.style = begins_with_t
 
-dotnet_naming_rule.parameter_should_be_camel_case.severity = error
+dotnet_naming_rule.parameter_should_be_camel_case.severity = warning
 dotnet_naming_rule.parameter_should_be_camel_case.symbols = parameter
 dotnet_naming_rule.parameter_should_be_camel_case.style = camel_case
+
+dotnet_naming_rule.local_variable_should_be_camel_case.severity = warning
+dotnet_naming_rule.local_variable_should_be_camel_case.symbols = local_variable
+dotnet_naming_rule.local_variable_should_be_camel_case.style = camel_case
 
 # Symbol specifications
 
@@ -247,8 +251,8 @@ dotnet_naming_symbols.types.applicable_kinds = class, struct, interface, enum
 dotnet_naming_symbols.types.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
 dotnet_naming_symbols.types.required_modifiers = 
 
-dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, method
-dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
+dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, local, method
+dotnet_naming_symbols.non_field_members.applicable_accessibilities = *
 dotnet_naming_symbols.non_field_members.required_modifiers = 
 
 dotnet_naming_symbols.type_parameters.applicable_kinds = type_parameter
@@ -258,6 +262,10 @@ dotnet_naming_symbols.type_parameters.required_modifiers =
 dotnet_naming_symbols.parameter.applicable_kinds = parameter
 dotnet_naming_symbols.parameter.applicable_accessibilities = *
 dotnet_naming_symbols.parameter.required_modifiers = 
+
+dotnet_naming_symbols.local_variable.applicable_kinds = local
+dotnet_naming_symbols.local_variable.applicable_accessibilities = local
+dotnet_naming_symbols.local_variable.required_modifiers = 
 
 # Naming styles
 
