build: adjust projref paths

--- a/bench/EtherSharp.Bench.csproj
+++ b/bench/EtherSharp.Bench.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\EtherSharp.csproj" />
+    <ProjectReference Include="..\src\EtherSharp\EtherSharp.csproj" />
   </ItemGroup>
 
 </Project>
