--- a/bench/EtherSharp.Bench.csproj
+++ b/bench/EtherSharp.Bench.csproj
@@ -9,11 +9,11 @@
 
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-		<NoWarn>CA1822</NoWarn>
+		<NoWarn>CA1822;NU1903</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<NoWarn>CA1822</NoWarn>
+		<NoWarn>CA1822;NU1903</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
