--- a/bench/EtherSharp.Bench.csproj
+++ b/bench/EtherSharp.Bench.csproj
@@ -19,6 +19,7 @@
 	<ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
     <PackageReference Include="Nethereum.HdWallet" Version="4.26.0" />
+    <PackageReference Include="Nethereum.RLP" Version="4.26.0" />
     <PackageReference Include="Nethereum.Util" Version="4.26.0" />
     <PackageReference Include="Secp256k1.Native" Version="0.1.23" />
   </ItemGroup>
