--- a/src/EtherSharp/EtherSharp.csproj
+++ b/src/EtherSharp/EtherSharp.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="Keysmith.Net" Version="1.2.2" />
     <PackageReference Include="Keysmith.Net.Secp256k1" Version="1.2.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
 <ItemGroup>
